@@ -1,5 +1,7 @@
 package com.cartoonishvillain.eeriehauntings;
 
+import com.cartoonishvillain.eeriehauntings.capabilities.playercapability.PlayerCapability;
+import com.cartoonishvillain.eeriehauntings.capabilities.worldcapability.WorldCapability;
 import com.cartoonishvillain.eeriehauntings.config.ClientConfig;
 import com.cartoonishvillain.eeriehauntings.config.ConfigHelper;
 import com.cartoonishvillain.eeriehauntings.config.ServerConfig;
@@ -7,8 +9,8 @@ import com.cartoonishvillain.eeriehauntings.networking.lightsoundpackets.LightCl
 import com.cartoonishvillain.eeriehauntings.networking.mediumsoundpackets.MediumClientSoundMessenger;
 import com.cartoonishvillain.eeriehauntings.networking.shaderupdatepacket.ShaderUpdateMessenger;
 import com.cartoonishvillain.eeriehauntings.networking.strongsoundpackets.StrongClientSoundMessenger;
-import net.minecraft.sounds.SoundEvent;
-import net.minecraft.sounds.SoundEvents;
+import net.minecraft.util.SoundEvent;
+import net.minecraft.util.SoundEvents;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.fml.common.Mod;
 import net.minecraftforge.fml.config.ModConfig;
@@ -18,13 +20,14 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 // The value here should match an entry in the META-INF/mods.toml file
 @Mod("eeriehauntings")
 public class EerieHauntings
 {
-    public static ArrayList<SoundEvent> lowEndSounds = new ArrayList<SoundEvent>(List.of(SoundEvents.GLASS_BREAK, SoundEvents.CREEPER_PRIMED, SoundEvents.ZOMBIE_BREAK_WOODEN_DOOR, SoundEvents.WITHER_BREAK_BLOCK, SoundEvents.CHEST_OPEN, SoundEvents.WITHER_SPAWN, SoundEvents.WITHER_AMBIENT, SoundEvents.LAVA_EXTINGUISH, SoundEvents.PISTON_CONTRACT, SoundEvents.PISTON_EXTEND, SoundEvents.TNT_PRIMED, SoundEvents.GENERIC_EXPLODE, SoundEvents.ENDER_DRAGON_GROWL, SoundEvents.AMBIENT_CAVE, SoundEvents.AMBIENT_CAVE));
+    public static ArrayList<SoundEvent> lowEndSounds = new ArrayList<SoundEvent>(Arrays.asList(SoundEvents.GLASS_BREAK, SoundEvents.CREEPER_PRIMED, SoundEvents.ZOMBIE_BREAK_WOODEN_DOOR, SoundEvents.WITHER_BREAK_BLOCK, SoundEvents.CHEST_OPEN, SoundEvents.WITHER_SPAWN, SoundEvents.WITHER_AMBIENT, SoundEvents.LAVA_EXTINGUISH, SoundEvents.PISTON_CONTRACT, SoundEvents.PISTON_EXTEND, SoundEvents.TNT_PRIMED, SoundEvents.GENERIC_EXPLODE, SoundEvents.ENDER_DRAGON_GROWL, SoundEvents.AMBIENT_CAVE, SoundEvents.AMBIENT_CAVE));
     public static final String MODID = "eeriehauntings";
     public static ServerConfig serverConfig;
     public static ClientConfig clientConfig;
@@ -49,6 +52,8 @@ public class EerieHauntings
     private void setup(final FMLCommonSetupEvent event)
     {
         // some preinit code
+        PlayerCapability.register();
+        WorldCapability.register();
 
     }
 
